# fraize_core

./: .gitignore  Cargo.toml  README.md
src/: audio.rs  audio_pa.rs  crash_slicer.txt  dist.rs  main.rs  mid.rs  notes.md
src/_deprec/: ___repitch_track.rs  __pvoc_track.rs  _base_dsp_sinc_track.rs  _glicthed_sinc_track.rs  analytics.rs  sliced_track.rs  track_utils.rs
src/audio/: analytics.rs  basic_track.rs  filters.c  filters.rs  mixer.rs  mod.rs  pa.rs  pvoc_track.rs  repitch_track.rs  sliced_track.rs  track.rs  track_utils.rs
src/config/: default.toml  mod.rs  nunja.toml
src/control/: mod.rs
src/midi/: mod.rs
src/osc/: mod.rs
src/sample_gen/: analytics.rs  gen_utils.rs  mod.rs  pvoc.rs  repitch.rs  slicer.rs
src/sample_lib/: mod.rs
src/sampling/: mod.rs
src/ui/: mod.rs
