[package]
name = "smplr"
version = "0.0.2"
authors = ["Aymeric Nungee <nunja@free.fr>"]

[dependencies]
rand = "0.3.14"
midir = "0.5.0"
bus = "2.0.0"
time_calc = "0.13.0"
hound = "3.4.0"
sample = "0.10.0"
num = "0.1.28"
elapsed = "0.1"
wmidi = "1.1.0"
toml = "0.5.0"
serde = { version = "1.0.90", features = ["derive"] }
time = "*"



[dependencies.cpal]
# modified cpal
path = "../cpal"

[dependencies.aubio]
# modified aubio wrapper
path = "../aubio-rs"

# [dependencies.basic_dsp]
# path = "../basic_dsp"


[profile.dev]
opt-level = 2
