[package]
name = "smplr"
version = "0.0.2"
authors = ["Aymeric Nungee <nunja@free.fr>"]
edition = "2018"

[dependencies]
rand = "0.3.14"
midir = "0.5.0"
crossbeam-channel = "0.3.9"
time_calc = "0.13.0"
hound = "3.4.0"
sample = "0.10.0"
num = "0.1.28"
elapsed = "0.1"
wmidi = "1.1.0"
toml = "0.5.0"
dirs = "1.0"
serde = { version = "1.0.90", features = ["derive"] }
serde_json = "1.0"
time = "*"
rosc = "0.1.6"
heapless = "0.5.3"
easer = "0.2.1"
regex = "1"


[dependencies.cpal]
# modified cpal
git = "https://github.com/discordance/cpal.git"

[dependencies.aubio_port_rs]
# pure rust aubio port
git = "https://github.com/discordance/aubio_port_rust.git"

[dev-dependencies]
plotlib = "0.4.0"

[profile.dev]
opt-level = 2
